# valerioedx

./: .gitignore  LICENSE  README.md  run.sh
kernel/: kernel.c
kernel/arch/aarch64/: CMakeLists.txt  limine.conf  linker.ld  virt.dts
kernel/arch/aarch64/cpu/: boot.S  dtb.c  exceptions.c  limine_reqs.c  main.c
kernel/arch/aarch64/drivers/: fb.c  uart.c  virtio-blk.c  virtio-block.c  virtio-key.c  virtio-mouse.c  virtio-rng.c  virtio.c
kernel/arch/aarch64/firmware/: fwcfg.c  gic.c  pl031.c  ramfb.c  timer.c  uart.c  virtio.c
kernel/arch/aarch64/lib/: dtb.h  fb.h  fwcfg.h  gic.h  io.h  irq.h  pl031.h  ramfb.h  timer.h  uart.h  virtio.h
kernel/arch/x64/: CMakeLists.txt  grub.cfg  linker.ld
kernel/arch/x64/cpu/: boot.asm  gdt.c  idt.c  stage1.c
kernel/arch/x64/firmware/: vga.c
kernel/arch/x64/lib/: gdt.h  idt.h  io.h  vga.h
kernel/drivers/: tty.c
kernel/fs/: devfs.c  elf.c  fat32.c  file.c  vfs.c
kernel/lib/: elf.h  fat32.h  file.h  heap.h  kernel.h  pmm.h  sched.h  signal.h  spinlock.h  sync.h  syscalls.h  tty.h  vfs.h  virtio.h  vma.h  vmm.h
kernel/mm/: heap.c  pmm.c  vma.c  vmm.c
kernel/syscalls/: chdir.c  dup.c  exec.c  fork.c  getuid.c  ioctl.c  kill.c  mkdir.c  mmap.c  open.c  pipe.c  stat.c  syscalls.c  sysctl.c  time.c  write.c
kernel/threading/: sched.c  switch.S  sync.c
lib/: kio.h  lib.h  multiboot.h  string.h
lib/src/: kio.c  string.c
user/: CMakeLists.txt  crt0.S  init.c
user/commands/: cat.c  cd.c  echo.c  ls.c  mkdir.c  rm.c  rmdir.c  touch.c
user/lib/: ctype.h  dirent.h  errno.h  fcntl.h  pwd.h  signal.h  stdalign.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  termios.h  time.h  unistd.h
user/lib/sys/: ioctl.h  mman.h  reboot.h  stat.h  sysctl.h  types.h  wait.h
user/programs/sh/: sh.c
user/programs/sh/commands/: cd.c  export.c  pwd.c  which.c
user/programs/vbasic/: vbasic.c
user/src/: ctype.c  dirent.c  errno.c  fcntl.c  ioctl.c  mman.c  pwd.c  reboot.c  signal.c  stat.c  stdio.c  stdlib.c  string.c  sysctl.c  termios.c  time.c  unistd.c  wait.c
user/utils/: cat.c  clear.c  echo.c  halt.c  ls.c  mkdir.c  mouse.c  printenv.c  reboot.c  rm.c  rmdir.c  shutdown.c  touch.c
